--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "three": "^0.134.0",
     "troisjs": "^0.3.3",
     "vue": "^3.2.20"
