--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -16,6 +18,7 @@
     "@types/three": "^0.134.0",
     "@vitejs/plugin-vue": "^1.9.4",
     "@vue/compiler-sfc": "^3.2.20",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.9.15",
     "vite-plugin-vue-type-imports": "^0.2.4",
